# ai-engineer-workshop

./: .gitignore  Makefile  README.md  pyproject.toml  raw_send.py  run_code.py
app/: analyse.py  prompt.toml  send_email.py  send_reply.py  server.py
cf-worker/: package-lock.json  package.json  wrangler.toml
cf-worker/src/: index.ts
pyodide_run_code/: package-lock.json  package.json  run.mjs
