[project]
name = "spiced-ham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioaws>=0.15.1",
    "logfire[httpx,starlette]>=3.6.1",
    "markdown>=3.7",
    "pydantic>=2.10.6",
    "pyright>=1.1.394",
    "ruff>=0.9.7",
    "starlette>=0.45.3",
    "uvicorn>=0.34.0",
    "watchfiles>=1.0.4",
]

[tool.ruff]
line-length = 120
target-version = "py313"
include = ["app/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "Q",
    "RUF100",
    "C90",
    "UP",
    "I",
    "D",
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }
ignore = [
    "D100", # ignore missing docstring in module
    "D102", # ignore missing docstring in public method
    "D104", # ignore missing docstring in public package
    "D105", # ignore missing docstring in magic methods
    "D107", # ignore missing docstring in __init__ methods
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"
